--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -1,1 +1,5 @@
 spring.datasource.url=${DATABASE_URL}
+spring.rabbitmq.host=${RABBITMQ_HOST}
+spring.rabbitmq.password=${RABBITMQ_PASSWORD}
+spring.rabbitmq.virtual-host=${RABBITMQ_VHOST}
+spring.rabbitmq.username=${RABBITMQ_USER}
